turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: type mismatch;
 found   : (Int, Int, Int)
 required: Int
  rule=Array(Array(Array((1,8,0),(1,2,1)) , Array((0,1,1),(0,1,1))))
                         ^Turmite:48: error: type mismatch;
 found   : (Int, Int, Int)
 required: Int
  rule=Array(Array(Array((1,8,0),(1,2,1)) , Array((0,1,1),(0,1,1))))
                                 ^Turmite:48: error: type mismatch;
 found   : (Int, Int, Int)
 required: Int
  rule=Array(Array(Array((1,8,0),(1,2,1)) , Array((0,1,1),(0,1,1))))
                                                  ^Turmite:48: error: type mismatch;
 found   : (Int, Int, Int)
 required: Int
  rule=Array(Array(Array((1,8,0),(1,2,1)) , Array((0,1,1),(0,1,1))))
                                                          ^